# TorchScope

./: .gitignore  README.md  example.py  package.json  torchscope.db
backend/: pyproject.toml  test.py  testing.py  torchscope.db  torchscope.db.wal
backend/src/torchscope/: main.py  scope.py  temp.py  torch.py
backend/src/torchscope/db/: basic.py  utils.py
backend/src/torchscope/model/: graph.py  hashing.py
frontend/: index.html  package-lock.json  package.json  torchscope.db  torchscope.db.wal  vite.config.js
frontend/src/: App.jsx  AppDataContext.jsx  DynamicParameters.jsx  GlobalPlot.jsx  GridBackground.jsx  Loading.jsx  ModelSVG.jsx  Navbar.jsx  NavbarMenuItem.jsx  Parameter.jsx  ResponsivePlot.jsx  SnappableResizable.jsx  index.css  main.jsx
frontend/src/plots/: LinePlot.jsx
