[project]
name = "torchscope"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "duckdb>=1.3.0",
    "fastapi>=0.115.12",
    "pydantic>=2.11.5",
    "uvicorn>=0.34.3",
]


[project.optional-dependencies]
dev = ["pytest", "httpx"]

[project.scripts]
torchscope = "torchscope.main:run"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
