[project]
name = "torchscope"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "duckdb>=1.3.0",
    "fastapi>=0.115.12",
    "pandas>=2.3.0",
    "pydantic>=2.11.5",
    "pydot>=4.0.1",
    "python-multipart>=0.0.20",
    "requests>=2.32.4",
    "tabulate>=0.9.0",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "uvicorn[standard]>=0.34.3",
]


[project.optional-dependencies]
dev = ["pytest", "httpx"]

[project.scripts]
torchscope = "torchscope.main:run"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "watchfiles>=1.0.5",
]
